crates/muxa-cli/src/snapshots/muxa__watch__tests__snapshot_confirm_popup.snap
---
source: crates/muxa-cli/src/watch.rs
expression: "snapshot_helpers::buffer_string(&terminal)"
---
 muxa watch   1 agent  + 0 panes   sort PANE ID   <clock>
j/k move  ·  / filter  ·  : commands  ·  ? help
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
┌ Agents ──────────────────────────────────────────────────┐┌ Inspector · main:2.0 · WORK <rel> ──────────────────────────┐
│  NAME            STATE        ACT    SUMMARY             ││kind claude_code  model —                                 │
│> main:2.0        ● WORK <rel> <rel> hello               ││latest hello                                              │
│                                      ↳ hello             ││──────────────────────────────────────────────────────────│
│                                                          ││(capturing pane…)                                         │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                             ┌ confirm ─────────────────────────────────────────────────┐                             │
│                             │Kill pane main:2.0?                                       │                             │
│                             │                                                          │                             │
│                             │  [y]es / [N]o (Esc/Tab/anything else cancels)            │                             │
│                             │                                                          │                             │
│                             └──────────────────────────────────────────────────────────┘                             │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
└──────────────────────────────────────────────────────────┘└──────────────────────────────────────────────────────────┘
 j/k  move   h/l  tree   /  filter   :  commands   ⏎  jump   o  preview   m  message   M  mailbox   ?  help
