crates/muxa-cli/src/snapshots/muxa__watch__tests__snapshot_empty_state.snap
---
source: crates/muxa-cli/src/watch.rs
expression: "snapshot_helpers::buffer_string(&terminal)"
---
 muxa watch   0 agents  + 0 panes   sort PANE ID   <clock>
j/k move  ·  type or / filter  ·  : commands  ·  ? help
────────────────────────────────────────────────────────────────────────────────────────────────────
┌ Agents ──────────────────────────────────────────────────────────────────────────────────────────┐
│                                                                                                  │
│                                                                                                  │
│                                        No agents tracked.                                        │
│                       Start an agent, or run `muxa doctor` to check setup.                       │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
 j/k  move   h/l  tree   /  filter   :  commands   ⏎  prompt   o  preview   m  message   M  mailbox
