crates/muxa-cli/src/snapshots/muxa__watch__tests__snapshot_row_error.snap
---
source: crates/muxa-cli/src/watch.rs
assertion_line: 7443
expression: "snapshot_helpers::buffer_string(&terminal)"
---
 muxa watch   1 agent  + 0 panes   <clock>

────────────────────────────────────────────────────────────────────────────────────────────────────
┌ Agents ──────────────────────────────────────────────────────────────────────────────────────────┐
│  PANE                   ST  LAST PROMPT                                                     ACT  │
│> alpha:3.0              !   boom                                                            <rel>│
│                             ↳ boom                                                               │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
 ↑/↓  move   ⏎  attach   p  preview   r  refresh   ?  help   q  quit
