crates/muxa-cli/src/snapshots/muxa__watch__tests__snapshot_row_waiting_choice.snap
---
source: crates/muxa-cli/src/watch.rs
assertion_line: 8203
expression: "snapshot_helpers::buffer_string(&terminal)"
---
 muxa watch   1 agent  + 0 panes   sort PANE ID   <clock>

────────────────────────────────────────────────────────────────────────────────────────────────────
┌ Agents ──────────────────────────────────────────────────────────────────────────────────────────┐
│  PANE                   ST  LAST PROMPT                                                     ACT  │
│> alpha:2.0              ◆   pick a plan                                                     <rel>│
│                             ↳ pick a plan                                                        │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
 ↑/↓  move   ⏎  prompt   ⏎⏎  attach   p  preview   r  refresh   s/a/d/t  sort   ?  help   q  quit
