crates/muxa-cli/src/snapshots/muxa__watch__tests__snapshot_row_waiting_input.snap
---
source: crates/muxa-cli/src/watch.rs
expression: "snapshot_helpers::buffer_string(&terminal)"
---
 muxa watch   1 agent  + 0 panes   sort PANE ID   <clock>

────────────────────────────────────────────────────────────────────────────────────────────────────
┌ Agents ──────────────────────────────────────────────────────────────────────────────────────────┐
│  NAME                   ST  ACT   LAST PROMPT                                                    │
│> alpha:1.0              ▶   <rel>approve permission?                                            │
│                                   ↳ approve permission?                                          │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
 ↑/↓  move   ⏎  prompt   ⏎⏎  attach   p  preview   r  refresh   s/l/d/t  sort   ?  help   q  quit
