crates/muxa-cli/src/snapshots/muxa__watch__tests__snapshot_row_working.snap
---
source: crates/muxa-cli/src/watch.rs
expression: "snapshot_helpers::buffer_string(&terminal)"
---
 muxa watch   1 agent  + 0 panes   <clock>

────────────────────────────────────────────────────────────────────────────────────────────────────
┌ Agents ──────────────────────────────────────────────────────────────────────────────────────────┐
│  PANE                   STATE          LAST PROMPT                                     ACTIVITY  │
│> alpha:0.0              working        refactor the ipc module                         <rel>│
│                                        ↳ refactor the ipc module                                 │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
 ↑/↓  move   ⏎  attach   p  preview   r  refresh   ?  help   q  quit
